# zed-kalibr

./: .gitignore  .gitmodules  README.md  april_10x6_53.2x32.4cm.yaml  imu.yaml  justfile  kalibr-notes.txt  log.txt  pyproject.toml
bags/: kalibr-data-1678980198-camchain-imucam.yaml  kalibr-data-1678980198-camchain.yaml  kalibr-data-1678980198-imu.yaml  kalibr-data-1678980198-results-cam.txt  kalibr-data-1678980198-results-imucam.txt
